tidy up training at local notebook.

--- a/notebooks/1.training_at_local.ipynb
+++ b/notebooks/1.training_at_local.ipynb
@@ -5,9 +5,23 @@
    "id": "08ceb8bd",
    "metadata": {},
    "source": [
-    "## Deep Learning ML training at local\n",
+    "## PyTorch Lightning ML Training with Weights and Bias Checkpoints\n",
     "\n",
-    "The purpose of the notebook is to demo how to training a computer vision model at local using PyTorch Lightning, with Weights & Bias for full traceability and reproducibility."
+    "> This is a quick demo on how to run ML training (with PyTorch Lightning) at local with Weights and Bias integration.\n",
+    "\n",
+    "Weights and Bias (W&B) is a popular platform for ML experiment, linage checking and checkpoints storage. When using PyTorch Lightning framework, it provides native integration with W&B, which makes the the training / validation metrics logging, and checkpoint storage easy. \n",
+    "\n",
+    "In this notebook, we show case on how the integration, and how to resume training from checkpoints, which provides a good reference when moving to large-scale ML training using Amazon SageMaker Training Job."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cd2f6bc",
+   "metadata": {},
+   "source": [
+    "### Setup\n",
+    "\n",
+    "we are using `.env` to store environment variable(s). In our use case, we used `WANDB_API_KEY` for W&B login (authentication)."
    ]
   },
   {
@@ -29,8 +43,10 @@
    ],
    "source": [
     "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv(\"../.env\")\n",
     "\n",
+    "# login W&B\n",
     "import wandb\n",
     "wandb.login()"
    ]
@@ -40,12 +56,14 @@
    "id": "a93d35d2",
    "metadata": {},
    "source": [
-    "### Setup the dataloader"
+    "### Dataloader for ML Training\n",
+    "\n",
+    "We shall use a OSS image dataset - MNIST for a image classification problem. In this section, we will focus on creating `DataLoader`, which will be input for ML training."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f748ffb2",
    "metadata": {},
    "outputs": [],
@@ -60,16 +78,8 @@
     "])\n",
     "\n",
     "dataset = MNIST(root=\"./data/MNIST\", download=True, transform=transform)\n",
-    "training_set, validation_set = random_split(dataset, [55_000, 5000])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "582d0c80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "training_set, validation_set = random_split(dataset, [55_000, 5000])\n",
+    "\n",
     "training_loader = DataLoader(training_set, batch_size=64, shuffle=True)\n",
     "validation_loader = DataLoader(validation_set, batch_size=64)"
    ]
@@ -79,7 +89,11 @@
    "id": "7c4672a4",
    "metadata": {},
    "source": [
-    "### Defining the model"
+    "### Defining the model architecture\n",
+    "\n",
+    "This section is to capture the model architecture for the image classification problem. We create a class `MNIST_LitModule` with providing hyperparameters (including class number, layers and learning rate, etc.)\n",
+    "\n",
+    "The model architecture and configuration is a workable solution, which is not optimized for solving the image classification. We shall use it to demo the integration with W&B."
    ]
   },
   {
@@ -94,21 +108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a011a33c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import lightning.pytorch as pl\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "9901004e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import lightning.pytorch as pl\n",
+    "\n",
     "import torch\n",
     "from torch.nn import Linear, CrossEntropyLoss, functional as F\n",
     "from torch.optim import Adam\n",
@@ -198,6 +204,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a71d517",
+   "metadata": {},
+   "source": [
+    "Define the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "c0408743",
@@ -212,7 +226,9 @@
    "id": "747ea4ce",
    "metadata": {},
    "source": [
-    "### Save model checkpoints"
+    "### Training Callbacks\n",
+    "\n",
+    "The callbacks is to enable model checkpoints configuration and show case how to capture W&B checkpoint(s) meta data on a SageMaker Training Job using `SageMakerTrainingJobTaggingCallback`. \n"
    ]
   },
   {
@@ -236,7 +252,9 @@
    "id": "113162c1",
    "metadata": {},
    "source": [
-    "#### Logging images"
+    "> Given this is an example to train at local, there is no SageMaker training jobs associated with it. However, the utility class is for a showcase purpose without real usage.\n",
+    "\n",
+    "In SageMaker Training Job integration with W&B, we shall leave the train script refer to the tags and the environment variables to resume ML training."
    ]
   },
   {
@@ -252,17 +270,6 @@
     "\n",
     "sagemaker_client = boto3.client('sagemaker')\n",
     "\n",
-    "def tag_training_job(training_job_arn:str, entity: str, project: str, checkpoint_name: str):\n",
-    "    print(\"tag_training_job() is invoked\")\n",
-    "    response = sagemaker_client.add_tags(\n",
-    "        ResourceArn=training_job_arn,\n",
-    "        Tags=[\n",
-    "            {'Key': \"WANDB_ENTITY\", \"Value\": entity},\n",
-    "            {'Key': \"WANDB_PROJECT\", \"Value\": project},\n",
-    "            {'Key': \"WANDB_CHECKPOINT_NAME\", \"Value\": checkpoint_name}\n",
-    "        ]\n",
-    "    )\n",
-    "\n",
     "class SageMakerTrainingJobTaggingCallback(Callback):\n",
     "\n",
     "    def __init__(self, training_job_arn:str):\n",
@@ -273,18 +280,28 @@
     "        print(\"on_save_checkpoint() is invoked.\")\n",
     "        checkpoint_name = trainer.logger._checkpoint_name\n",
     "        # for saving a checkpoint for epoch '0', the checkpoint name is not generated yet.\n",
-    "        if checkpoint_name is not None: \n",
+    "        if checkpoint_name is not None and (not self.tagging_done): \n",
     "            self.tagging_done = True\n",
     "            entity = trainer.logger._experiment.entity\n",
     "            project = trainer.logger._project\n",
     "\n",
     "            # put tags on training job\n",
-    "            tag_training_job(self.training_job_arn, entity, project, checkpoint_name)\n",
+    "            self.tag_training_job(self.training_job_arn, entity, project, checkpoint_name)\n",
     "        else:\n",
     "            # checkpoint name is not generated at wandb server side yet.\n",
     "            pass\n",
     "    \n",
-    "    \n",
+    "    def tag_training_job(self, training_job_arn:str, entity: str, project: str, checkpoint_name: str):\n",
+    "        print(\"tag_training_job() is invoked\")\n",
+    "        response = sagemaker_client.add_tags(\n",
+    "            ResourceArn=training_job_arn,\n",
+    "            Tags=[\n",
+    "                {'Key': \"WANDB_ENTITY\", \"Value\": entity},\n",
+    "                {'Key': \"WANDB_PROJECT\", \"Value\": project},\n",
+    "                {'Key': \"WANDB_CHECKPOINT_NAME\", \"Value\": checkpoint_name}\n",
+    "            ]\n",
+    "        )    \n",
+    "\n",
     "training_job_arn = \"\"\n",
     "tagging_callback = SageMakerTrainingJobTaggingCallback(training_job_arn)"
    ]
@@ -294,12 +311,12 @@
    "id": "5749dbad",
    "metadata": {},
    "source": [
-    "### Train Your Model"
+    "### ML Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "fd7a895c",
    "metadata": {},
    "outputs": [
@@ -319,13 +336,34 @@
     "\n",
     "wandb_logger = WandbLogger(project=\"MNIST\", log_model=\"all\")\n",
     "\n",
-    "\n",
     "trainer = Trainer(\n",
     "    logger=wandb_logger,\n",
-    "    callbacks=[tagging_callback, checkpoint_callback],\n",
+    "    callbacks=[checkpoint_callback], # adding tagging_callback to testing on how callback works on tagging training job. \n",
     "    accelerator=\"gpu\",\n",
     "    max_epochs=5\n",
-    ")"
+    ")\n",
+    "\n",
+    "trainer.fit(model, training_loader, validation_loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fe45b12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wandb.finish()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93ca75ca",
+   "metadata": {},
+   "source": [
+    "### ML training with resuming checkpoint(s)\n",
+    "\n",
+    "This section is to showcase how to download model artefact with specific checkpoint reference, and resume the ML training using a checkpoint."
    ]
   },
   {
@@ -335,119 +373,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import glob \n",
+    "import glob \n",
     "\n",
-    "# checkpoint_reference = \"{entity}/MNIST/model-hri3trgq:v14\"\n",
-    "# download_artefact_path = wandb_logger.download_artifact(checkpoint_reference, artifact_type=\"model\")\n",
-    "# download_artefact_path\n",
+    "checkpoint_reference = \"{entity}/MNIST/model-hri3trgq:v14\"\n",
+    "download_artefact_path = wandb_logger.download_artifact(checkpoint_reference, artifact_type=\"model\")\n",
+    "download_artefact_path\n",
     "\n",
     "\n",
-    "# model_files = glob.glob(f\"{download_artefact_path}/*.ckpt\")\n",
+    "model_files = glob.glob(f\"{download_artefact_path}/*.ckpt\")\n",
     "\n",
-    "# model_files[0]\n",
-    "# model = MNIST_LitModule.load_from_checkpoint(model_files[0]) \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "394b7927",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/workspace/deep-learning/sagemaker-training-job-wandb-samples/.venv/lib/python3.12/site-packages/lightning/pytorch/loggers/wandb.py:397: There is a wandb run already in progress and newly created instances of `WandbLogger` will reuse this run. If this is not desired, call `wandb.finish()` before instantiating `WandbLogger`.\n",
-      "/home/ubuntu/workspace/deep-learning/sagemaker-training-job-wandb-samples/.venv/lib/python3.12/site-packages/lightning/pytorch/callbacks/model_checkpoint.py:701: Checkpoint directory ./MNIST/eslt91sx/checkpoints exists and is not empty.\n",
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-      "\n",
-      "  | Name    | Type             | Params | Mode \n",
-      "-----------------------------------------------------\n",
-      "0 | layer_1 | Linear           | 100 K  | train\n",
-      "1 | layer_2 | Linear           | 16.5 K | train\n",
-      "2 | layer_3 | Linear           | 1.3 K  | train\n",
-      "3 | loss    | CrossEntropyLoss | 0      | train\n",
-      "-----------------------------------------------------\n",
-      "118 K     Trainable params\n",
-      "0         Non-trainable params\n",
-      "118 K     Total params\n",
-      "0.473     Total estimated model params size (MB)\n",
-      "4         Modules in train mode\n",
-      "0         Modules in eval mode\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                                            "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/workspace/deep-learning/sagemaker-training-job-wandb-samples/.venv/lib/python3.12/site-packages/lightning/pytorch/trainer/connectors/data_connector.py:433: The 'val_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=15` in the `DataLoader` to improve performance.\n",
-      "/home/ubuntu/workspace/deep-learning/sagemaker-training-job-wandb-samples/.venv/lib/python3.12/site-packages/lightning/pytorch/trainer/connectors/data_connector.py:433: The 'train_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=15` in the `DataLoader` to improve performance.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0: 100%|██████████| 860/860 [00:11<00:00, 75.70it/s, v_num=91sx]on_save_checkpoint() is invoked.\n",
-      "!!!LightningModule-Checkpoint!!!\n",
-      "checkpoint name None\n",
-      "project MNIST\n",
-      "name None\n",
-      "entity tom-5610-aws\n",
-      "Epoch 1: 100%|██████████| 860/860 [00:11<00:00, 75.58it/s, v_num=91sx]on_save_checkpoint() is invoked.\n",
-      "tag_training_job() is invoked\n",
-      "!!!LightningModule-Checkpoint!!!\n",
-      "checkpoint name model-eslt91sx\n",
-      "project MNIST\n",
-      "name None\n",
-      "entity tom-5610-aws\n",
-      "Epoch 2: 100%|██████████| 860/860 [00:11<00:00, 76.30it/s, v_num=91sx]on_save_checkpoint() is invoked.\n",
-      "tag_training_job() is invoked\n",
-      "!!!LightningModule-Checkpoint!!!\n",
-      "checkpoint name model-eslt91sx\n",
-      "project MNIST\n",
-      "name None\n",
-      "entity tom-5610-aws\n",
-      "Epoch 3: 100%|██████████| 860/860 [00:11<00:00, 75.79it/s, v_num=91sx]on_save_checkpoint() is invoked.\n",
-      "tag_training_job() is invoked\n",
-      "!!!LightningModule-Checkpoint!!!\n",
-      "checkpoint name model-eslt91sx\n",
-      "project MNIST\n",
-      "name None\n",
-      "entity tom-5610-aws\n",
-      "Epoch 4: 100%|██████████| 860/860 [00:11<00:00, 75.54it/s, v_num=91sx]on_save_checkpoint() is invoked.\n",
-      "tag_training_job() is invoked\n",
-      "!!!LightningModule-Checkpoint!!!\n",
-      "checkpoint name model-eslt91sx\n",
-      "project MNIST\n",
-      "name None\n",
-      "entity tom-5610-aws\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`Trainer.fit` stopped: `max_epochs=5` reached.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4: 100%|██████████| 860/860 [00:11<00:00, 73.69it/s, v_num=91sx]\n"
-     ]
-    }
-   ],
-   "source": [
+    "trainer = Trainer(\n",
+    "    logger=wandb_logger,\n",
+    "    callbacks=[checkpoint_callback], # adding tagging_callback to testing on how callback works on tagging training job. \n",
+    "    accelerator=\"gpu\",\n",
+    "    max_epochs=5\n",
+    ")\n",
+    "\n",
+    "model = MNIST_LitModule.load_from_checkpoint(model_files[0]) \n",
     "trainer.fit(model, training_loader, validation_loader)"
    ]
   },
@@ -462,118 +404,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe2d7f2e",
+   "cell_type": "markdown",
+   "id": "f0a997cf",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "wandb_logger._checkpoint_name, wandb_logger._save_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8bf6b24e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "api = wandb.Api()\n",
+    "### Next step\n",
     "\n",
-    "collections = [\n",
-    "    coll for coll in api.artifact_type(type_name=\"model\", project=\"MNIST\").collections()\n",
-    "]\n",
-    "\n",
-    "aliases = set()\n",
-    "\n",
-    "# for coll in collections:\n",
-    "    # print(coll.artifacts.)\n",
-    "\n",
-    "print(collections)\n",
-    "print(\"aliases\", aliases)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56f6446a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifacts = api.artifacts(type_name=\"model\", name=\"{entity}/MNIST/model-ano4gslu\")\n",
-    "\n",
-    "if artifacts:\n",
-    "    print(artifacts.next().source_qualified_name)\n",
-    "else:\n",
-    "    print('not found')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9da1dd92",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "checkpoint_reference = \"{entity}/MNIST/model-ano4gslu:latest\"\n",
-    "wandb_logger.download_artifact(checkpoint_reference, artifact_type=\"model\", save_dir=\"./checkpoint\")\n"
+    "We will experiment W&B integration with SageMaker Training Job. Please refer to [SageMaker Training](./2.sagemaker-training/README.md)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "46a67b8e",
+   "id": "18a006ae",
    "metadata": {},
-   "source": [
-    "### processing training job tagging"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a054d7d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{}"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import boto3\n",
-    "\n",
-    "sagemaker_client = boto3.client('sagemaker')\n",
-    "\n",
-    "def get_sagemaker_training_job_tags(training_job_arn:str):\n",
-    "    response = sagemaker_client.list_tags(ResourceArn=training_job_arn)\n",
-    "    tags = {}\n",
-    "    for tag in response['Tags']:\n",
-    "        tags[tag['Key']] = tag['Value']\n",
-    "    return tags\n",
-    "\n",
-    "job_arn = \"\"\n",
-    "get_sagemaker_training_job_tags(job_arn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8896f2f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53b1c32c",
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
