tidy up local notebook.

--- a/notebooks/1.training_at_local.ipynb
+++ b/notebooks/1.training_at_local.ipynb
@@ -29,18 +29,7 @@
    "execution_count": null,
    "id": "ec26c3be",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "\n",
@@ -213,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c0408743",
    "metadata": {},
    "outputs": [],
@@ -233,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a4945617",
    "metadata": {},
    "outputs": [],
@@ -243,7 +232,7 @@
     "checkpoint_callback = ModelCheckpoint(\n",
     "    filename=\"{epoch:03d}\",\n",
     "    monitor='val_accuracy', \n",
-    "    save_top_k=-1,\n",
+    "    save_top_k=-1, \n",
     "    mode='max')"
    ]
   },
@@ -302,6 +291,7 @@
     "            ]\n",
     "        )    \n",
     "\n",
+    "# when tagging SageMaker Training jobs, please ensure to use AWS identity (IAM user/role) with 'SageMaker:AddTag' permission\n",
     "training_job_arn = \"\"\n",
     "tagging_callback = SageMakerTrainingJobTaggingCallback(training_job_arn)"
    ]
@@ -319,17 +309,7 @@
    "execution_count": null,
    "id": "fd7a895c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: True (cuda), used: True\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "HPU available: False, using: 0 HPUs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from lightning.pytorch.loggers import WandbLogger\n",
     "from lightning.pytorch import Trainer\n",
@@ -375,21 +355,23 @@
    "source": [
     "import glob \n",
     "\n",
-    "checkpoint_reference = \"{entity}/MNIST/model-hri3trgq:v14\"\n",
+    "entity = wandb_logger._experiment.entity\n",
+    "project = wandb_logger._project\n",
+    "checkpoint_name = \"<pending>\" # may check wandb.ai to find an example checkpoint name.\n",
+    "checkpoint_tag = \"latest\"\n",
+    "checkpoint_reference = f\"{entity}/{project}/{checkpoint_name}:{checkpoint_tag}\"\n",
+    "\n",
     "download_artefact_path = wandb_logger.download_artifact(checkpoint_reference, artifact_type=\"model\")\n",
-    "download_artefact_path\n",
-    "\n",
-    "\n",
     "model_files = glob.glob(f\"{download_artefact_path}/*.ckpt\")\n",
+    "model = MNIST_LitModule.load_from_checkpoint(model_files[0]) \n",
     "\n",
     "trainer = Trainer(\n",
     "    logger=wandb_logger,\n",
     "    callbacks=[checkpoint_callback], # adding tagging_callback to testing on how callback works on tagging training job. \n",
     "    accelerator=\"gpu\",\n",
-    "    max_epochs=5\n",
+    "    max_epochs=3\n",
     ")\n",
     "\n",
-    "model = MNIST_LitModule.load_from_checkpoint(model_files[0]) \n",
     "trainer.fit(model, training_loader, validation_loader)"
    ]
   },
@@ -412,12 +394,6 @@
     "\n",
     "We will experiment W&B integration with SageMaker Training Job. Please refer to [SageMaker Training](./2.sagemaker-training/README.md)."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "18a006ae",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
