make the notebooks readable.

--- a/notebooks/1.ml-training-at-local.ipynb
+++ b/notebooks/1.ml-training-at-local.ipynb
@@ -291,7 +291,7 @@
     "            ]\n",
     "        )    \n",
     "\n",
-    "# when tagging SageMaker Training jobs, please ensure to use AWS identity (IAM user/role) with 'SageMaker:AddTag' permission\n",
+    "# when tagging SageMaker Training jobs, please ensure to use AWS identity (IAM user/role) with 'sagemaker:AddTags' permission\n",
     "training_job_arn = \"\"\n",
     "tagging_callback = SageMakerTrainingJobTaggingCallback(training_job_arn)"
    ]
