documentation for notebook 2 and the project.

--- a/notebooks/2.sagemaker-training/2.training-at-SageMaker-Training-Job.ipynb
+++ b/notebooks/2.sagemaker-training/2.training-at-SageMaker-Training-Job.ipynb
@@ -151,7 +151,36 @@
    "id": "6e6f2cf1",
    "metadata": {},
    "source": [
-    "### Set hyperparameters"
+    "### Setup SageMaker Training Job\n",
+    "\n",
+    "Please note that we are using SageMaker PyTorch pre-built training container for our ML training runtime. \n",
+    "\n",
+    "**Runtime customization**\n",
+    "\n",
+    "In my example, I need to install Python packages (including [PyTorch Lightning](https://lightning.ai/) and [Weights & Bias](https://wandb.ai/)) (aka. WANDB) for my runtime. To do so, I specify `source_dir` in  SageMaker Estimator `Pytorch`, which may pick up the [requirements.txt](./src/requirements.txt) for environment customization before running the training script.\n",
+    "\n",
+    "**WANDB Integration**\n",
+    "\n",
+    "The purpose of the integration is to make ML experimentation on Amazon SageMaker, e.g. linage tracking for ML experiment, checkpoints, etc. To do so, I've create a WANDB secret (api key) in [AWS Secret Manager](https://docs.aws.amazon.com/secretsmanager/latest/userguide/intro.html). Before executing the training, it will enable WANDB integration for ML training with PyTroch Lightning. \n",
+    "\n",
+    "**Resume ML training when Cluster repairs for GPU errors**\n",
+    "\n",
+    "For deep learning model training, GPU errors are common and you may want to enable checkpoints so as to resume training once Sagemaker Cluster repair is done. To learn more about [Cluster repairs for GPU errors](https://docs.aws.amazon.com/sagemaker/latest/dg/model-checkpoints-cluster-repair.html).\n",
+    "\n",
+    "There are two options:\n",
+    "\n",
+    "> This notebook showcase option 2.\n",
+    "\n",
+    "1. Enable `checkpoint_s3_uri` parameter when creating a SageMaker Estimator object. With that, you could save ML training checkpoints into local folder `/opt/ml/checkpoints/`, which will be sync to the checkpoint S3 uri. When hardware repair occurs, SageMaker Training Job will automatically pull the latest checkpoint from the checkpoint S3 uri, which can be loaded to resume ML training.\n",
+    "\n",
+    "2. Downloading a latest checkpoints from WANDB so as to resume ML training. To do so, we are using `SageMakerTrainingJobTaggingCallback` in [training script](./src/train.py) to mark WANDB ML experimentation information, including `entity`, `project` and `checkpoint_name`, into tags associated with the training job. Such details will be useful when resuming ML training from WANDB checkpoint.\n",
+    "\n",
+    "In addition, when you are keen to resume ML training from a specific checkpoint from WANDB, you may specifying below variables in `environment` parameter on SageMaker Estimator:\n",
+    "* `WANDB_SECRET_NAME` - the secret name\n",
+    "* `AWS_DEFAULT_REGION` - the dedicated region for the secret. e.g. us-east-1\n",
+    "* `WANDB_PROJECT` - the project in your WANDB workspace\n",
+    "* [optional] `WANDB_CHECKPOINT_NAME` - if specified, it will be used to resume ML training.\n",
+    "* [optional] `WANDB_CHECKPOINT_TAG` - if specified, the associated checkpoint will be used, otherwise, using 'latest' checkpoint."
    ]
   },
   {
@@ -198,6 +227,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e79c2ad1",
+   "metadata": {},
+   "source": [
+    "Kick off SageMaker Training Job. \n",
+    "\n",
+    "> We didn't provide data channel for the training as we are running a sample on `MNIST` classification problem, with which we will download training/evaluation/training data from torchvision dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d2272ce3",
@@ -206,6 +245,20 @@
    "source": [
     "estimator.fit(wait=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71c69e1e",
+   "metadata": {},
+   "source": [
+    "To observe how a training job runs, please refer this [aws repost thread](https://repost.aws/knowledge-center/sagemaker-training-job-errors) for more details, e.g. checking related CloudWatch logs. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86c9d7d8",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
