docker build comment on notebook 2

--- a/notebooks/2.sagemaker-training/2.training-at-SageMaker-Training-Job.ipynb
+++ b/notebooks/2.sagemaker-training/2.training-at-SageMaker-Training-Job.ipynb
@@ -159,6 +159,8 @@
     "\n",
     "In my example, I need to install Python packages (including [PyTorch Lightning](https://lightning.ai/) and [Weights & Bias](https://wandb.ai/)) (aka. WANDB) for my runtime. To do so, I specify `source_dir` in  SageMaker Estimator `Pytorch`, which may pick up the [requirements.txt](./src/requirements.txt) for environment customization before running the training script.\n",
     "\n",
+    "Meanwhile, [docker](./docker/) provides a reference on how to bake a custom image for ML training. In our example, we use [requirements.txt](./src/requirements.txt) for simplicity.\n",
+    "\n",
     "**WANDB Integration**\n",
     "\n",
     "The purpose of the integration is to make ML experimentation on Amazon SageMaker, e.g. linage tracking for ML experiment, checkpoints, etc. To do so, I've create a WANDB secret (api key) in [AWS Secret Manager](https://docs.aws.amazon.com/secretsmanager/latest/userguide/intro.html). Before executing the training, it will enable WANDB integration for ML training with PyTroch Lightning. \n",
