side notes about client side IAM permissions

--- a/notebooks/2.sagemaker-training/2.training-at-SageMaker-Training-Job.ipynb
+++ b/notebooks/2.sagemaker-training/2.training-at-SageMaker-Training-Job.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "In the notebook, we will work through SageMaker Execution Role creation, W&B secret creation (for API key) and invoke SageMaker Training Job service. \n",
     "\n",
-    "\n"
+    "> For create IAM role, S3 bucket, secret and pass the created SageMaker Execution role, you will need proper IAM permissions for your client side. You may use AWS Managed Policy on your identity principal (IAM user / role) for the testing this example.  \n"
    ]
   },
   {
